--- a/about.css
+++ b/about.css
@@ -13,13 +13,20 @@ body {
     letter-spacing: .7em;
 }
 
+nav {
+    width: 100%;
+    background-color: #ffffff;
+}
+
 nav ul li {
     margin-left: 30px;
 }
 
-.navbar.scrolled {
-    background: #ffffff;
-    transition: background 500ms;
+.fixed-nav nav {
+    position: fixed;
+    top: 0;
+    z-index: 1;
+    transition: background 500ms; /* TODO: Needs to be fixed */
 }
 
 a:link {
