--- a/projects.css
+++ b/projects.css
@@ -46,13 +46,20 @@ a:hover {
     letter-spacing: .7em;
 }
 
+nav {
+    width: 100%;
+    background-color: #ffffff;
+}
+
 nav ul li {
     margin-left: 30px;
 }
 
-.navbar.scrolled {
-    background: #ffffff;
-    transition: background 500ms;
+.fixed-nav nav {
+    position: fixed;
+    top: 0;
+    z-index: 1;
+    transition: background 500ms; /* TODO: Needs to be fixed */
 }
 
 .github-icon-projs {
