--- a/style/projects.css
+++ b/style/projects.css
@@ -66,6 +66,12 @@ nav ul li {
     font-size: 2.5rem;
 }
 
+.devpost-icon {
+    width: 3.1rem;
+    margin-bottom: 25px;
+    margin-left: 5px;
+}
+
 @media (max-width: 1200px) {
     .blurb h2 {
         font-size: 2rem;
